--- a/src/components/css/home.css
+++ b/src/components/css/home.css
@@ -1,4 +1,35 @@
-.home{
+.home {
     width: 100%;
-    height: 200vh;
+    height: 300vh;
+    position: relative;
+}
+
+.main-home {
+    width: 100%;
+    height: 100vh;
+    background-image: url("../img//home.jpg");
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.item-main-home{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.title-home{
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100px;
+    color: #fff;
+    font-size: 2rem;
+    text-align: center;
+    background-color: #000000b4;
 }
